--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             </a>
 
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <a class="dropdown-item text-dark" href="#">Leave Types</a>
+                                <a class="dropdown-item text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
                                 <a class="dropdown-item text-dark" href="#">Leave Allocations</a>
                                 <a class="dropdown-item text-dark" href="#">Leave Applications</a>
                                 <a class="dropdown-item text-dark" href="#">Employees</a>
