--- a/Views/LeaveTypes/Index.cshtml
+++ b/Views/LeaveTypes/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h1>Leave Types</h1>
-
+<hr />
 <p>
     <a asp-action="Create" class="btn btn-success"> <i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
 </p>
-<table class="table">
+<table id="tblData" class="table">
     <thead>
         <tr>
             <th>
@@ -46,7 +46,6 @@
         }
     </tbody>
 </table>
-
 @section Scripts{
     <script>
 
