--- a/Views/LeaveTypes/Create.cshtml
+++ b/Views/LeaveTypes/Create.cshtml
@@ -22,17 +22,12 @@
                 <input asp-for="DefaultDays" class="form-control" />
                 <span asp-validation-for="DefaultDays" class="text-danger"></span>
             </div>
-
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary btn-block" />
-
-                <a class="btn btn-outline-secondary btn-block" asp-action="Index">Back to List</a>
+                <input type="submit" value="Create" class="btn btn-primary btn-block" /> <a class="btn btn-outline-secondary btn-block" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
-
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
