--- a/Views/LeaveTypes/Details.cshtml
+++ b/Views/LeaveTypes/Details.cshtml
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    >
+
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -32,7 +32,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model.Id">Edit</a> 
-    <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
-   
+    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model.Id">Edit</a> <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
 </div>
