--- a/Views/LeaveTypes/Edit.cshtml
+++ b/Views/LeaveTypes/Edit.cshtml
@@ -25,15 +25,12 @@
                 <input asp-for="DefaultDays" class="form-control" />
                 <span asp-validation-for="DefaultDays" class="text-danger"></span>
             </div>
-
             <div class="form-group">
-                <input type="submit" value="Save changes" class="btn btn-success" />
-                <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
+                <input type="submit" value="Save Changes" class="btn btn-success " /> <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
 
 
 @section Scripts {
